otros/Ingress.yaml


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: jenkins.7bba3d73110b4868b18d.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /
