otros/kubedashboradingres.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubedash
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: kubedashborad.7bba3d73110b4868b18d.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
